<resources>
    <string name="app_name">Turkish Airlines Assistant App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate_miles">Calculate Miles</string>
    <string name="port">Port</string>
    <string name="available">Available</string>
    <string name="reservation">Reservation</string>
    <string name="timetable">Timetable</string>
    <string name="flight_miles">Flight Miles</string>
    <string name="award_miles">Award Miles</string>
    <string name="origin">FROM</string>
    <string name="destination">TO</string>
    <string name="reservation_id">Reservation ID</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="reservation_detail_description">This method returns the detailed information of the reservations created through our reservation system. It covers reservations made from all sales channels.</string>
    <string name="port_detail_description">This method returns the information of the lists all ports in details.</string>
    <string name="reservation_id_example">Reservation ID (e.g. UTRXLU)</string>
    <string name="surname_example">Surname (e.g. CELIKTAS)</string>
    <string name="name_example">Name (e.g. IREM)</string>
</resources>