<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_menu_calculate"
        android:title="@string/calculate_miles"
        android:icon="@drawable/icon_calculate"/>

    <item
        android:id="@+id/bottom_menu_port"
        android:title="@string/port"
        android:icon="@drawable/icon_port"/>

    <item
        android:id="@+id/bottom_menu_available"
        android:title="@string/available"
        android:icon="@drawable/icon_available"/>

    <item
        android:id="@+id/bottom_menu_reservation"
        android:title="@string/reservation"
        android:icon="@drawable/icon_reservation"/>

    <item
        android:id="@+id/bottom_menu_timetable"
        android:title="@string/timetable"
        android:icon="@drawable/icon_timetable"/>
</menu>