<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.fragment.reservation.domestic.ReservationDomesticFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Domestic Reservation"
            android:textSize="20sp"
            android:fontFamily="@font/mulish_bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/reservation_detail_description"
            android:textSize="10sp"
            android:fontFamily="@font/mulish_light"/>
        <!-- Airport  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_key"
                    android:background="@android:color/transparent"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/reservation_id"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextReservationID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulish_regular"
                        android:hint="@string/reservation_id_example"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="textCapCharacters" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_badge"
                    android:background="@android:color/transparent"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/surname"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextReservationSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulish_regular"
                        android:hint="@string/surname_example"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="textCapCharacters" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_badge"
                    android:background="@android:color/transparent"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/name"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextReservationName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulish_regular"
                        android:hint="@string/name_example"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="textCapCharacters" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <!-- Airlines  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_black"
                android:text="Airlines*" />

            <RadioGroup
                android:id="@+id/radioGroupAirlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonTurkishAirlines"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:checked="true"
                        android:fontFamily="@font/mulish_regular"
                        android:text="Turkish Airlines" />

                    <RadioButton
                        android:id="@+id/radioButtonAJet"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:fontFamily="@font/mulish_regular"
                        android:text="Anadolu Jet" />
                </LinearLayout>

            </RadioGroup>
        </LinearLayout>

        <!--Button -->
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonReservationDomestic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription=""
                app:srcCompat="@drawable/icon_search_reservation" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>

</FrameLayout>